add image and change kurdish.html

--- a/kurdish.html
+++ b/kurdish.html
@@ -540,8 +540,8 @@
         audio: 'audio/ku/zh.mp3', // Keep original audio path for the letter
         examples: [
             { text: 'برژانگ', image: 'images/ku/10.برژانگ.png', audio: 'audio/ku/برژانگ.mp3' },
-            { text: 'قژ', image: 'images/ku/10.قژ.png', audio: 'audio/ku/قژ.mp3' },
-            { text: 'مێوژ', image: 'images/ku/10.مێوژ.png', audio: 'audio/ku/مێوژ.mp3' },
+            { text: 'قژ', image: 'images/ku/10.قژژ.png', audio: 'audio/ku/قژ.mp3' },
+            { text: 'ئەژنۆ', image: 'images/ku/10.ئەژنۆ.png', audio: 'audio/ku/ئەژنۆ.mp3' },
             { text: 'ژوور', image: 'images/ku/10.ژوور.png', audio: 'audio/ku/ژوور.mp3' }
         ],
         lessonLink: 'https://u.pcloud.link/publink/show?code=kZK6qTVZQ5BHuauQCSfMe9MABGDSN4IH6PSX' // Placeholder link, keep original if existed
@@ -566,7 +566,7 @@
             { text: 'بەفر', image: 'images/ku/12.بەفر.png', audio: 'audio/ku/بەفر.mp3' },
             { text: 'بزن', image: 'images/ku/12.بزن.png', audio: 'audio/ku/بزن.mp3' },
             { text: 'باز', image: 'images/ku/12.باز.png', audio: 'audio/ku/باز.mp3' },
-            { text: 'باوی', image: 'images/ku/12.باوی.png', audio: 'audio/ku/باوی.mp3' }
+            { text: 'بەلەم', image: 'images/ku/12.بەلەم.png', audio: 'audio/ku/بەلەم.mp3' }
         ],
         lessonLink: 'https://u.pcloud.link/publink/show?code=kZI6qTVZU1ccDP0Npqk91AvP4SPb6yHVlFNX' // Placeholder link, keep original if existed
     },
@@ -588,7 +588,7 @@
          audio: 'audio/ku/uu.mp3', // Keep original audio path for the letter
          examples: [
             { text: 'بەڕوو', image: 'images/ku/14.بەڕوو.png', audio: 'audio/ku/بەڕوو.mp3' },
-            { text: 'پەموو', image: 'images/ku/14.پەموو.png', audio: 'audio/ku/پەموو.mp3' },
+            { text: 'ڕەژوو', image: 'images/ku/14.ڕەژوو.png', audio: 'audio/ku/ڕەژوو.mp3' },
             { text: 'بازوو', image: 'images/ku/14.بازوو.png', audio: 'audio/ku/بازوو.mp3' },
             { text: 'دەزوو', image: 'images/ku/14.دەزوو.png', audio: 'audio/ku/دەزوو.mp3' }
         ],
@@ -600,7 +600,7 @@
         audio: 'audio/ku/m.mp3', // Keep original audio path for the letter
         examples: [
             { text: 'شەمامە', image: 'images/ku/15.شەمامە.png', audio: 'audio/ku/شەمامە.mp3' },
-            { text: 'شێلم', image: 'images/ku/15.شێلم.png', audio: 'audio/ku/شێلم.mp3' },
+            { text: 'زمان', image: 'images/ku/15.زمان.png', audio: 'audio/ku/زمان.mp3' },
             { text: 'مۆم', image: 'images/ku/15.مۆم.png', audio: 'audio/ku/مۆم.mp3' },
             { text: 'مێو', image: 'images/ku/15.مێو.png', audio: 'audio/ku/مێو.mp3' }
         ],
@@ -614,7 +614,7 @@
             { text: 'ترێ', image: 'images/ku/16.ترێ.png', audio: 'audio/ku/ترێ.mp3' },
             { text: 'شوتی', image: 'images/ku/16.شوتی.png', audio: 'audio/ku/شوتی.mp3' },
             { text: 'پرتەقال', image: 'images/ku/16.پرتەقال.png', audio: 'audio/ku/پرتەقال.mp3' },
-            { text: 'تەرزە', image: 'images/ku/16.تەرزە.png', audio: 'audio/ku/تەرزە.mp3' }
+            { text: 'درەخت', image: 'images/ku/16.درەخت.png', audio: 'audio/ku/درەخت.mp3' }
         ],
         lessonLink: 'https://u.pcloud.link/publink/show?code=kZpEqTVZAbKegq9wG2QeUxlR5zlgoXE1jLvk' // Placeholder link, keep original if existed
     },
@@ -638,7 +638,7 @@
             { text: 'تیمساح', image: 'images/ku/18.تیمساح.png', audio: 'audio/ku/تیمساح.mp3' },
             { text: 'مرزاح', image: 'images/ku/18.مرزاح.png', audio: 'audio/ku/مرزاح.mp3' },
             { text: 'حاجی', image: 'images/ku/18.حاجی.png', audio: 'audio/ku/حاجی.mp3' },
-            { text: 'حەسیر', image: 'images/ku/18.حەسیر.png', audio: 'audio/ku/حەسیر.mp3' }
+            { text: 'نەحنا', image: 'images/ku/18.نەحنا.png', audio: 'audio/ku/نەحنا.mp3' }
         ],
         lessonLink: 'https://u.pcloud.link/publink/show?code=kZ8EqTVZNUk9OL37N4HkXyzBTPQE9jxJz7Sy' // Placeholder link, keep original if existed
     },
