update code ( add image )

--- a/english.html
+++ b/english.html
@@ -523,7 +523,7 @@
         { text: 'Yellow', image: 'images/en/Yellow.png' },
         { text: 'Yarn', image: 'images/en/Yarn.png' },
         { text: 'Yak', image: 'images/en/Yak.png' },
-        { text: 'Yogurt', image: 'images/en/Yogurt.png' }
+        { text: 'Yoga', image: 'images/en/Yoga.png' }
     ]},
     { letter: 'Z', examples: [
         { text: 'Zebra', image: 'images/en/Zebra.png' },
