--- a/kurdish.html
+++ b/kurdish.html
@@ -428,10 +428,10 @@
         letter: 'د',
         audio: 'audio/ku/d.mp3', // Keep original audio path for the letter
         examples: [
-            { text: 'دەرگا', image: 'images/ku/1.دەرگا.png', audio: 'audio/ku/دەرگا.mp3' },
-            { text: 'پەردە', image: 'images/ku/1.پەردە.png', audio: 'audio/ku/پەردە.mp3' },
-            { text: 'دڵ', image: 'images/ku/1.دڵ.png', audio: 'audio/ku/دڵ.mp3' },
-            { text: 'دەم', image: 'images/ku/1.دەم.png', audio: 'audio/ku/دەم.mp3' }
+            { text: 'دەرگا', image: 'images/ku/1.دەرگا.png', audio: 'audio/ku/1.دەرگا.wav' },
+            { text: 'پەردە', image: 'images/ku/1.پەردە.png', audio: 'audio/ku/1.پەردە.wav' },
+            { text: 'دڵ', image: 'images/ku/1.دڵ.png', audio: 'audio/ku/1.دڵ.wav' },
+            { text: 'دەم', image: 'images/ku/1.دەم.png', audio: 'audio/ku/1.دەم.wav' }
         ],
         lessonLink: 'https://u.pcloud.link/publink/show?code=kZ06qTVZIYf2QxjLudyC9tjcw0AiSV9RKMNy' // Placeholder link, keep original if existed
     },
@@ -440,10 +440,10 @@
         letter: 'ر',
         audio: 'audio/ku/r.mp3', // Keep original audio path for the letter
         examples: [
-            { text: 'باران', image: 'images/ku/2.باران.png', audio: 'audio/ku/باران.mp3' },
-            { text: 'کۆلارە', image: 'images/ku/2.کۆلارە.png', audio: 'audio/ku/کۆلارە.mp3' },
-            { text: 'مار', image: 'images/ku/2.مار.png', audio: 'audio/ku/مار.mp3' },
-            { text: 'ورچ', image: 'images/ku/2.ورچ.png', audio: 'audio/ku/ورچ.mp3' }
+            { text: 'باران', image: 'images/ku/2.باران.png', audio: 'audio/ku/2.باران.wav' },
+            { text: 'کۆلارە', image: 'images/ku/2.کۆلارە.png', audio: 'audio/ku/2.کۆلارە.wav' },
+            { text: 'مار', image: 'images/ku/2.مار.png', audio: 'audio/ku/2.مار.wav' },
+            { text: 'ورچ', image: 'images/ku/2.ورچ.png', audio: 'audio/ku/2.ورچ.wav' }
         ],
         lessonLink: 'https://u.pcloud.link/publink/show?code=kZH6qTVZpWhYgV04wY0eg5r72f1omXKxxGhX' // Placeholder link, keep original if existed
     },
@@ -509,7 +509,7 @@
     },
     // 8. ئ
     {
-        letter: 'ئ',
+        letter: 'ئـ',
         audio: 'audio/ku/alif.mp3', // Keep original audio path for the letter
         examples: [
             { text: 'ئەسپ', image: 'images/ku/8.ئەسپ.png', audio: 'audio/ku/ئەسپ.mp3' },
@@ -613,7 +613,7 @@
         examples: [
             { text: 'ترێ', image: 'images/ku/16.ترێ.png', audio: 'audio/ku/ترێ.mp3' },
             { text: 'شوتی', image: 'images/ku/16.شوتی.png', audio: 'audio/ku/شوتی.mp3' },
-            { text: 'پرتەقال', image: 'images/ku/16.پرتەقال.png', audio: 'audio/ku/پرتەقال.mp3' },
+            { text: 'پرتەقاڵ', image: 'images/ku/16.پرتەقاڵ.png', audio: 'audio/ku/پرتەقاڵ.mp3' },
             { text: 'درەخت', image: 'images/ku/16.درەخت.png', audio: 'audio/ku/درەخت.mp3' }
         ],
         lessonLink: 'https://u.pcloud.link/publink/show?code=kZpEqTVZAbKegq9wG2QeUxlR5zlgoXE1jLvk' // Placeholder link, keep original if existed
@@ -636,7 +636,7 @@
         audio: 'audio/ku/h.mp3', // Keep original audio path for the letter
         examples: [
             { text: 'تیمساح', image: 'images/ku/18.تیمساح.png', audio: 'audio/ku/تیمساح.mp3' },
-            { text: 'مرزاح', image: 'images/ku/18.مرزاح.png', audio: 'audio/ku/مرزاح.mp3' },
+            { text: 'مزراح', image: 'images/ku/18.مزراح.png', audio: 'audio/ku/مزراح.mp3' },
             { text: 'حاجی', image: 'images/ku/18.حاجی.png', audio: 'audio/ku/حاجی.mp3' },
             { text: 'نەحنا', image: 'images/ku/18.نەحنا.png', audio: 'audio/ku/نەحنا.mp3' }
         ],
@@ -661,7 +661,7 @@
         examples: [
             { text: 'پەرژین', image: 'images/ku/20.پەرژین.png', audio: 'audio/ku/پەرژین.mp3' },
             { text: 'لاپتۆپ', image: 'images/ku/20.لاپتۆپ.png', audio: 'audio/ku/لاپتۆپ.mp3' },
-            { text: 'پۆستە', image: 'images/ku/20.پۆستە.png', audio: 'audio/ku/پۆستە.mp3' },
+            { text: 'پاپۆڕ', image: 'images/ku/20.پاپۆڕ.png', audio: 'audio/ku/پاپۆڕ.mp3' },
             { text: 'داپیرە', image: 'images/ku/20.داپیرە.png', audio: 'audio/ku/داپیرە.mp3' }
         ],
         lessonLink: 'https://u.pcloud.link/publink/show?code=kZmEqTVZNBilHoRPFjQ6aFwlvXl7JSvuv2m7' // Placeholder link
@@ -672,9 +672,9 @@
         audio: 'audio/ku/g.mp3', // Keep original audio path for the letter
         examples: [
             { text: 'سەگ', image: 'images/ku/21.سەگ.png', audio: 'audio/ku/سەگ.mp3' },
-            { text: 'ڕەگ', image: 'images/ku/21.ڕەگ.png', audio: 'audio/ku/ڕەگ.mp3' },
+            { text: 'گەنم', image: 'images/ku/21.گەنم.png', audio: 'audio/ku/گەنم.mp3' },
             { text: 'گەڵا', image: 'images/ku/21.گەڵا.png', audio: 'audio/ku/گەڵا.mp3' },
-            { text: 'مێرگ', image: 'images/ku/21.مێرگ.png', audio: 'audio/ku/مێرگ.mp3' }
+            { text: 'ئاگردانە', image: 'images/ku/21.ئاگردانە.png', audio: 'audio/ku/ئاگردانە.mp3' }
         ],
         lessonLink: 'https://u.pcloud.link/publink/show?code=kZsAdCVZ5TMEO29cWLjAYahiM9YnQFh3WY57' // Placeholder link, keep original if existed
     },
@@ -695,9 +695,9 @@
         letter: 'ل',
         audio: 'audio/ku/l.mp3', // Keep original audio path for the letter
         examples: [
-            { text: 'قەل', image: 'images/ku/23.قەل.png', audio: 'audio/ku/قەل.mp3' },
+            { text: 'لۆکە', image: 'images/ku/23.لۆکە.png', audio: 'audio/ku/لۆکە.mp3' },
             { text: 'چۆلەکە', image: 'images/ku/23.چۆلەکە.png', audio: 'audio/ku/چۆلەکە.mp3' },
-            { text: 'بولبول', image: 'images/ku/23.بولبول.png', audio: 'audio/ku/بولبول.mp3' },
+            { text: 'مل', image: 'images/ku/23.مل.png', audio: 'audio/ku/مل.mp3' },
             { text: 'کلیل', image: 'images/ku/23.کلیل.png', audio: 'audio/ku/کلیل.mp3' }
         ],
         lessonLink: 'https://u.pcloud.link/publink/show?code=kZPAdCVZ5bwvtJOhkfVk5egDsPmeFfvEBPLk' // Placeholder link, keep original if existed
@@ -710,7 +710,7 @@
             { text: 'عود', image: 'images/ku/24.عود.png', audio: 'audio/ku/عود.mp3' },
             { text: 'نەعناع', image: 'images/ku/24.نەعناع.png', audio: 'audio/ku/نەعناع.mp3' },
             { text: 'قانع', image: 'images/ku/24.قانع.png', audio: 'audio/ku/قانع.mp3' },
-            { text: 'عەفرین', image: 'images/ku/24.عەفرین.png', audio: 'audio/ku/عەفرین.mp3' }
+            { text: 'عەینەک', image: 'images/ku/24.عەینەک.png', audio: 'audio/ku/عەینەک.mp3' }
         ],
         lessonLink: 'https://u.pcloud.link/publink/show?code=kZwAdCVZzOCQq7negByayNdiB9wDgmcquJMX' // Placeholder link, keep original if existed
     },
@@ -720,8 +720,8 @@
         audio: 'audio/ku/hh.mp3', // Keep original audio path for 'ه'
         examples: [
             { text: 'هەڵۆ', image: 'images/ku/25.هەڵۆ.png', audio: 'audio/ku/هەڵۆ.mp3' },
-            { text: 'شەهێن', image: 'images/ku/25.شەهێن.png', audio: 'audio/ku/شەهێن.mp3' },
-            { text: 'هەڵەبجە', image: 'images/ku/25.هەڵەبجە.png', audio: 'audio/ku/هەڵەبجە.mp3' },
+            { text: 'بەهێ', image: 'images/ku/25.بەهێ.png', audio: 'audio/ku/بەهێ.mp3' },
+            { text: 'هەنار', image: 'images/ku/25.هەنار.png', audio: 'audio/ku/هەنار.mp3' },
             { text: 'کاهوو', image: 'images/ku/25.کاهوو.png', audio: 'audio/ku/کاهوو.mp3' }
         ],
         lessonLink: 'https://u.pcloud.link/publink/show?code=kZUAdCVZLTrh6TOMTsYGcz4oNmWXiLbOLFfy' // Placeholder link, keep original if existed
@@ -733,7 +733,7 @@
         examples: [
             { text: 'سەهۆڵ', image: 'images/ku/26.سەهۆڵ.png', audio: 'audio/ku/سەهۆڵ.mp3' },
             { text: 'هەڵاڵە', image: 'images/ku/26.هەڵاڵە.png', audio: 'audio/ku/هەڵاڵە.mp3' },
-            { text: 'دەهۆڵ', image: 'images/ku/26.دەهۆڵ.png', audio: 'audio/ku/دەهۆڵ.mp3' },
+            { text: 'باڵ', image: 'images/ku/26.باڵ.png', audio: 'audio/ku/باڵ.mp3' },
             { text: 'شمشاڵ', image: 'images/ku/26.شمشاڵ.png', audio: 'audio/ku/شمشاڵ.mp3' }
         ],
         lessonLink: 'https://u.pcloud.link/publink/show?code=kZtAdCVZYigQXbEW4ik3WvSJNrY4cfbtyDGX' // Placeholder link, keep original if existed
@@ -744,8 +744,8 @@
         audio: 'audio/ku/q.mp3', // Keep original audio path for the letter
         examples: [
             { text: 'قاپ', image: 'images/ku/27.قاپ.png', audio: 'audio/ku/قاپ.mp3' },
-            { text: 'قەزوان', image: 'images/ku/27.قەزوان.png', audio: 'audio/ku/قەزوان.mp3' },
-            { text: 'پاقلە', image: 'images/ku/27.پاقلە.png', audio: 'audio/ku/پاقلە.mp3' },
+            { text: 'لەق لەق', image: 'images/ku/27.لەق لەق.png', audio: 'audio/ku/لەق لەق.mp3' },
+            { text: 'بۆق', image: 'images/ku/27.بۆق.png', audio: 'audio/ku/بۆق.mp3' },
             { text: 'سڵق', image: 'images/ku/27.سڵق.png', audio: 'audio/ku/سڵق.mp3' }
         ],
         lessonLink: 'https://u.pcloud.link/publink/show?code=kZiAdCVZVKoR1cWSVpBOnKY4YnHqdSNHddtk' // Placeholder link, keep original if existed
@@ -755,7 +755,7 @@
         letter: 'خ',
         audio: 'audio/ku/kh.mp3', // Keep original audio path for the letter
         examples: [
-            { text: 'مێخەک', image: 'images/ku/28.مێخەک.png', audio: 'audio/ku/مێخەک.mp3' },
+            { text: 'خۆخ', image: 'images/ku/28.خۆخ.png', audio: 'audio/ku/خۆخ.mp3' },
             { text: 'مەشخەڵ', image: 'images/ku/28.مەشخەڵ.png', audio: 'audio/ku/مەشخەڵ.mp3' },
             { text: 'بەرخ', image: 'images/ku/28.بەرخ.png', audio: 'audio/ku/بەرخ.mp3' },
             { text: 'خانوو', image: 'images/ku/28.خانوو.png', audio: 'audio/ku/خانوو.mp3' }
@@ -768,9 +768,9 @@
         audio: 'audio/ku/c.mp3', // Keep original audio path for the letter
         examples: [
             { text: 'جانتا', image: 'images/ku/29.جانتا.png', audio: 'audio/ku/جانتا.mp3' },
-            { text: 'برنج', image: 'images/ku/29.برنج.png', audio: 'audio/ku/برنج.mp3' },
+            { text: 'جاجم', image: 'images/ku/29.جاجم.png', audio: 'audio/ku/جاجم.mp3' },
             { text: 'پەنجە', image: 'images/ku/29.پەنجە.png', audio: 'audio/ku/پەنجە.mp3' },
-            { text: 'جۆ', image: 'images/ku/29.جۆ.png', audio: 'audio/ku/جۆ.mp3' }
+            { text: 'جزدان', image: 'images/ku/29.جزدان.png', audio: 'audio/ku/جزدان.mp3' }
         ],
         lessonLink: 'https://u.pcloud.link/publink/show?code=kZ7NdCVZN35QHyGmJxJ6FgcxotnVhFbHgufk' // Placeholder link, keep original if existed
     },
@@ -780,7 +780,7 @@
         audio: 'audio/ku/gh.mp3', // Keep original audio path for the letter
         examples: [
             { text: 'باغ', image: 'images/ku/30.باغ.png', audio: 'audio/ku/باغ.mp3' },
-            { text: 'نەغەدە', image: 'images/ku/30.نەغەدە.png', audio: 'audio/ku/نەغەدە.mp3' }, // Using first word from 'نەغەدە لغاو'
+            { text: 'غاردان', image: 'images/ku/30.غاردان.png', audio: 'audio/ku/غاردان.mp3' }, // Using first word from 'نەغەدە لغاو'
             { text: 'لغاو', image: 'images/ku/30.لغاو.png', audio: 'audio/ku/لغاو.mp3' }, // Using second word
             { text: 'قەڵغان', image: 'images/ku/30.قەڵغان.png', audio: 'audio/ku/قەڵغان.mp3' }
         ],
